--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "mysqldump": "^3.2.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "strftime": "^0.10.2"
   }
 }
